public/website/css/main.rtl.css
.clipped-image-container .text-cut {
    inset-inline-start: unset;
    inset-inline-end: 14px;
}
.users-rate {
    inset-inline-start: unset;
}
.about-main .stats .stat .stats-imgs .arrow a {
    transform: rotate(118deg)
}

h1.main-title {
    color: var(--dark-text-color);
    font-size: 53px !important;
    font-weight: 500;
}
.float-section{
    transform: translateX(50%) !important;
    right: 50% !important;
    left: unset !important;
}

.float-section-container {
    margin-bottom: 85% !important;
}
.blank-banner h1.title{
    font-size: 31px !important;
}


.btn-outline-primary {
    color: #9dcc6b !important;
    border-color: #9dcc6b !important;
}

.btn-outline-primary:hover {
    background-color: #9dcc6b !important;
    border-color: #9dcc6b !important;
    color: #fff !important;
}

.btn-outline-primary:focus,
.btn-outline-primary:active {
    background-color: #8cc35c !important;
    border-color: #8cc35c !important;
    color: #fff !important;
    box-shadow: 0 0 0 0.2rem rgba(157, 204, 107, 0.5) !important;
}

